--- a/Boffalora/Boffalora/src/main/resources/static/style4.css
+++ b/Boffalora/Boffalora/src/main/resources/static/style4.css
@@ -70,3 +70,31 @@ input, select {
 .header img {
   margin-right: 20px; /* Spazio tra immagine e titolo */
 }
+
+#loading-overlay {
+    position: fixed; /* Copre tutta la pagina */
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); /* Sfondo semi-trasparente */
+    display: flex;
+    justify-content: center; /* Centra orizzontalmente */
+    align-items: center; /* Centra verticalmente */
+    z-index: 9999; /* Assicura che sia sopra gli altri elementi */
+}
+
+.loading-spinner {
+    /* Stile per l'animazione di caricamento */
+    border: 4px solid #f3f3f3; /* Grigio chiaro */
+    border-top: 4px solid #3498db; /* Blu */
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    animation: spin 2s linear infinite; /* Animazione infinita */
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
