--- a/Boffalora/Boffalora/src/main/resources/static/style.css
+++ b/Boffalora/Boffalora/src/main/resources/static/style.css
@@ -48,7 +48,7 @@ input, select {
     border: 1px solid #00ADC6;
 }
 
-button[type="submit"] {
+#mioBottone{
   width: 250px;
   grid-column: 1 / 1; 
   background-color: skyblue;
@@ -60,4 +60,41 @@ button[type="submit"] {
   float: right;
   margin-right: 20px;
   font-size: 21px;
+}
+
+.header {
+  display: flex; /* Abilita Flexbox per il contenitore */
+  align-items: center; /* Allinea verticalmente gli elementi al centro */
+}
+
+.header img {
+  margin-right: 20px; /* Spazio tra immagine e titolo */
+}
+
+#loading-overlay {
+    position: fixed; /* Copre tutta la pagina */
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); /* Sfondo semi-trasparente */
+    display: flex;
+    justify-content: center; /* Centra orizzontalmente */
+    align-items: center; /* Centra verticalmente */
+    z-index: 9999; /* Assicura che sia sopra gli altri elementi */
+}
+
+.loading-spinner {
+    /* Stile per l'animazione di caricamento */
+    border: 4px solid #f3f3f3; /* Grigio chiaro */
+    border-top: 4px solid #3498db; /* Blu */
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    animation: spin 2s linear infinite; /* Animazione infinita */
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
 }
