--- a/Boffalora/Boffalora/src/main/resources/static/style.css
+++ b/Boffalora/Boffalora/src/main/resources/static/style.css
@@ -102,3 +102,8 @@ input, select {
     0% { transform: rotate(0deg); }
     100% { transform: rotate(360deg); }
 }
+
+img {
+  width: 150px; /* Larghezza relativa al contenitore genitore */
+  height: auto;
+}
